--- a/gallery-api/build.gradle
+++ b/gallery-api/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'dev.zucca-ops.gradle-publisher' version '1.0.1-PR-37-SNAPSHOT'
+    id 'dev.zucca-ops.gradle-publisher' version '1.0.2'
     id 'org.openapi.generator' version '7.12.0'
 }
 
