--- a/gallery-app/build.gradle
+++ b/gallery-app/build.gradle
@@ -5,8 +5,10 @@ plugins {
 
 version = rootProject.version
 
+def apiVersion = project(':gallery-api').extensions.getByName("publisher").resolvedVersion
+
 dependencies {
-    api "dev.zucca-ops:gallery-api:${project(':gallery-api').extensions.getByName("publisher").resolvedVersion}"
+    api "dev.zucca-ops:gallery-api:${apiVersion}"
 }
 
 evaluationDependsOn(':gallery-api')
