--- a/gallery-app/build.gradle
+++ b/gallery-app/build.gradle
@@ -6,13 +6,13 @@ plugins {
 version = rootProject.version
 evaluationDependsOn(':gallery-api')
 
-afterEvaluate {
-    println("evaluating dependency")
-    dependencies {
-        api "dev.zucca-ops:gallery-api:${project(':gallery-api').version}"
+dependencies {
+    api("dev.zucca-ops:gallery-api") {
+        version {
+            strictly(project(':gallery-api').version)
+        }
     }
 }
-
 configurations.configureEach { config ->
     if (config.name == "compileClasspath") {
         config.incoming.beforeResolve {
